--- a/less/events.less
+++ b/less/events.less
@@ -129,7 +129,11 @@
 		.make-xs-column(4);
 		.make-sm-column(3);
 		.make-md-column(2);
-
+		@media (max-width: @screen-xs-max) {
+			&:nth-child(3n+1) {
+				clear: both;
+			}
+		}
 		@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) {
 			&:nth-child(4n+1) {
 				clear: both;
@@ -157,6 +161,7 @@
 				line-height: 1.1em;
 				@media (max-width: @screen-sm-max) {
 					margin-top: 5px;
+					font-size: 16px;
 				}
 				font-size: 20px;
 				a {
@@ -386,6 +391,10 @@
 		.container {
 			background-color: rgba(255,255,255,.85);
 			box-shadow: 0 1px 3px rgba(0,0,0,.3);
+			@media (max-width: @screen-xs-max) {
+				padding-left: 20px;
+				padding-right: 20px;
+			}
 			@media (min-width: @screen-sm-min) {
 				padding: @grid-gutter-width @grid-gutter-width*2 @grid-gutter-width*2;
 			}
